Corrected contrast error in ul

--- a/styles/base.css
+++ b/styles/base.css
@@ -32,6 +32,7 @@ ul {
   justify-content: space-around;
   align-items: center;
   background: #000;
+  color: white;
 }
 
 a {
